--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,12 +86,14 @@ jobs:
 
       - name: Run tests with coverage
         run: pytest --cov=app --cov-report=xml --cov-report=term-missing
-
+      
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
+        continue-on-error: true
         with:
-          files: ./coverage.xml
-          fail_ci_if_error: true
+          file: ./coverage.xml
+          fail_ci_if_error: false
+          token: ${{ secrets.CODECOV_TOKEN }}
 
   build:
     runs-on: ubuntu-latest
